Changed text on Homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,10 @@
     </ul>
 
     <div style="margin: 0px 200px; height: 100%; background-color: aqua;">
-        <span>Fortnite</span>
-        <span>Fortnite</span>
-        <span>Fortnite</span>
+        <span>Herzlich Willkommen!</span>
+        <span>Hier kann man die beliebtesten Rezepte finden.</span>
+        <span>Sortiert danach, wann das Gericht zuletzt gegessen wurde.</span>
+        <span>Außerdem kann nach Vorlieben gefiltert werden.</span>
     </div>
 
 
